# 2048

./: README.md  pyproject.toml
src/: __main__.py
src/consts/: __init__.py
src/fonts/: __init__.py
src/game/: __init__.py  cell.py  game.py
